--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <title>Frontend Mentor | Time tracking dashboard</title>
-
   <link rel="stylesheet" href="./styles/style.css">
+
+  <!-- Coded By: JEFFREY TUASON -->
 
 </head>
 <body>
@@ -23,34 +24,11 @@
           </div>
         </header>
         <div class="profile__buttons">
-          <!-- <button type="button" class="btn">Daily</button>
-          <button type="button" class="btn active">Weekly</button>
-          <button type="button" class="btn">Monthly</button> -->
         </div>
       </article>
       <!-- end of profile -->
       <div class="cards-container">
-        
       </div>
-
-      <!-- <article class="card">
-        <img src="./images/icon-work.svg" alt="bag icon" />
-        <div class="card__details">
-          <header class="card__header">
-            <h4>Work</h4>
-            <button type="button" class="card__button btn">
-              <div class="card__ellipsis"></div>
-              <div class="card__ellipsis"></div>
-              <div class="card__ellipsis"></div>
-            </button>
-          </header>
-          <div class="counts">
-            <h3 class="counts__current">32hrs</h3>
-            <p class="counts__previous">Last Week - 36hrs</p>
-          </div>
-        </div>
-      </article> -->
-
     </div>
   </main>
 
